--- a/.env.prod5100
+++ b/.env.prod5100
@@ -17,13 +17,13 @@ VUE_APP_CURRENCY_FORMAT = 'comma'
 VUE_APP_LANGUAGE_FRAME = 'zh-CN'
 
 # 当前这个皮唯一标识和页面主题色 themeXXX 表示3.0.0
-# VUE_APP_PAGE_RHEME = 'theme8080'
+VUE_APP_PAGE_RHEME = 'pop-pro'
 
 #本地启动服务端口号
-VUE_APP_PORT = 8080
+VUE_APP_PORT = 5100
 
 # 开发环境配置
-VUE_APP_ENV = 'development'
+VUE_APP_ENV = 'production'
 
 # 开发环境
 VUE_APP_BASE_API = ''
