--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve:dev8080": "vue-cli-service serve --mode dev8080",
-    "build": "vue-cli-service build",
+    "serve:dev5100": "vue-cli-service serve --mode dev5100",
+    "serve:prod5100": "vue-cli-service serve --mode prod5100",
+    "build:dev5100": "vue-cli-service build --mode dev5100",
+    "build:prod5100": "vue-cli-service build --mode prod5100 && tar -cvf theme5100.tar theme5100",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
