添加进度条配置，去掉打印

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.11.10",
     "jsencrypt": "^3.3.2",
     "lodash": "4.17.21",
+    "nprogress": "0.2.0",
     "pinia": "2.0.33",
     "store2": "^2.14.3",
     "vant": "4.8.5",
