--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vant/area-data": "^2.1.0",
+    "@vant/touch-emulator": "^1.4.0",
     "ant-design-vue": "4.2.6",
     "axios": "^1.6.7",
     "copy-to-clipboard": "^3.3.3",
@@ -22,6 +23,7 @@
     "nprogress": "0.2.0",
     "pinia": "2.0.33",
     "store2": "^2.14.3",
+    "swiper": "^10.3.1",
     "vant": "4.8.5",
     "vue": "^3.2.13",
     "vue-i18n": "^9.14.5",
