--- a/.env.prod5100
+++ b/.env.prod5100
@@ -2,13 +2,13 @@
 VUE_APP_TITLE = ''
 
 # 系统语言
-VUE_APP_LANGUAGE = 'zh-CN'
+VUE_APP_LANGUAGE = 'zh'
 
 # 系统货币符号
 VUE_APP_MONEYSYMBOL = '$'
 
 # 框架语言
-VUE_APP_LANGUAGE_FRAME = 'zh-CN'
+VUE_APP_LANGUAGE_FRAME = 'zh'
 
 # 当前这个皮唯一标识和页面主题色 themeXXX 表示3.0.0
 VUE_APP_PAGE_RHEME = 'pop-pro'
